# rag-scientific-qa

./: DSK821_NLP_L12_RAG.ipynb  Readme.md  chat-gpt_answers_15Q.md  ground_truth.txt  pyproject.toml  question.txt  rag.ipynb  rag_01.ipynb  rag_advanced.ipynb  rag_simple.ipynb  results.txt  semantic.ipynb  summary.txt
scientific_rag_db/: chroma.sqlite3
