[project]
name = "rag-scientific-qa"
version = "0.1.0"
description = "Scientific RAG with TensorFlow Metal and ChromaDB"
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    # Core
    "beautifulsoup4>=4.14.3",
    "datasets>=4.5.0",
    "lxml>=6.0.2",
    # TensorFlow (Apple Silicon / Metal)
    "tensorflow-macos==2.16.2",
    "tensorflow-metal==1.2.0",
    "tensorflow-datasets>=4.9.9",
    # Required for Transformers with TF 2.16 (Keras 3 bridge)
    "tf-keras>=2.16.0",
    # Transformers + embeddings
    "transformers>=4.41,<5.0",
    "sentence-transformers>=2.6,<4.0",
    # ChromaDB (pinned to avoid protobuf>=5)
    "chromadb==1.4.1",
    "opentelemetry-api==1.26.0",
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-proto==1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.26.0",
    # TensorFlow constraint
    "protobuf==4.25.8",
    "accelerate>=0.30,<1.0",
]
